[gd_scene load_steps=5 format=3 uid="uid://dpsh3thxlsq7j"]

[ext_resource type="Theme" uid="uid://2u7lnkn35v0c" path="res://GlobalTheme.tres" id="1_c3a3f"]
[ext_resource type="Script" path="res://GameMenus/GameScripts/EvidenceScreen.gd" id="1_cs5de"]
[ext_resource type="Texture2D" uid="uid://5w5qtugexeuh" path="res://icon.svg" id="2_n73nl"]

[sub_resource type="LabelSettings" id="LabelSettings_us7xr"]
font_size = 24

[node name="EvidenceScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c3a3f")
script = ExtResource("1_cs5de")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 21.0
offset_right = 118.0
offset_bottom = 81.0
text = "<"

[node name="EvidenceImage" type="Sprite2D" parent="."]
position = Vector2(973, 486)
texture = ExtResource("2_n73nl")

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_left = 363.0
offset_top = 872.0
offset_right = 588.0
offset_bottom = 973.0
text = "<"

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1360.0
offset_top = 885.0
offset_right = 1552.0
offset_bottom = 981.0
text = ">"

[node name="EvidenceDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 454.0
offset_top = 55.0
offset_right = 1502.0
offset_bottom = 176.0
label_settings = SubResource("LabelSettings_us7xr")
horizontal_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
